--- a/ui/editar-privilegios.ui
+++ b/ui/editar-privilegios.ui
@@ -37,7 +37,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_tabla_3">
        <property name="styleSheet">
-        <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+        <string notr="true">font: 18pt &quot;Segoe UI&quot;;
 color: #666666;</string>
        </property>
        <property name="text">
@@ -50,6 +50,7 @@ color: #666666;</string>
        <property name="styleSheet">
         <string notr="true">/* style for the QComboBox */
 QComboBox {
+font-size: 14pt;
 border-radius: 11px;
 border: 1px solid #ccc;
 background-color: white;
@@ -122,8 +123,8 @@ border: none;
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>517</width>
-          <height>62</height>
+          <width>519</width>
+          <height>83</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -148,7 +149,7 @@ background:rgba(149,127,95,1);
             </sizepolicy>
            </property>
            <property name="styleSheet">
-            <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+            <string notr="true">font: 16pt &quot;Segoe UI&quot;;
     color: white;</string>
            </property>
            <property name="text">
@@ -162,7 +163,7 @@ background:rgba(149,127,95,1);
          <item>
           <widget class="QCheckBox" name="checkBoxAllVer">
            <property name="styleSheet">
-            <string notr="true">font: 11pt &quot;Segoe UI&quot;;
+            <string notr="true">font: 14pt &quot;Segoe UI&quot;;
 color: white;</string>
            </property>
            <property name="text">
@@ -190,8 +191,8 @@ border: none;
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>319</width>
-          <height>62</height>
+          <width>423</width>
+          <height>83</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -216,7 +217,7 @@ background:rgba(149,127,95,1);
             </sizepolicy>
            </property>
            <property name="styleSheet">
-            <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+            <string notr="true">font: 16pt &quot;Segoe UI&quot;;
     color: white;</string>
            </property>
            <property name="text">
@@ -230,7 +231,7 @@ background:rgba(149,127,95,1);
          <item>
           <widget class="QCheckBox" name="checkBoxAllEscribir">
            <property name="styleSheet">
-            <string notr="true">font: 11pt &quot;Segoe UI&quot;;
+            <string notr="true">font: 14pt &quot;Segoe UI&quot;;
 color: white;</string>
            </property>
            <property name="text">
@@ -255,7 +256,7 @@ color: white;</string>
      <item row="6" column="0">
       <widget class="QLabel" name="label_4">
        <property name="styleSheet">
-        <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+        <string notr="true">font: 18pt &quot;Segoe UI&quot;;
 color: #666666;</string>
        </property>
        <property name="text">
@@ -279,6 +280,7 @@ color: #8fc26b;</string>
        <property name="styleSheet">
         <string notr="true">/* style for the QComboBox */
 QComboBox {
+font-size: 14pt;
 border-radius: 11px;
 border: 1px solid #ccc;
 background-color: white;
@@ -385,7 +387,7 @@ color: #957F5F;
 border-radius: 8px;
 background-color: #957F5F;
 color: white;
-font-size: 12px;
+font-size: 16pt;
 padding: 10px 30px;
 }
 
@@ -413,7 +415,7 @@ border-radius: 8px;
 border: 1px solid #957F5F;
 background-color: white;
 color: #957F5F;
-font-size: 12px;
+font-size: 16pt;
 padding: 10px 30px;
 }
 
