agregar opción de colores en editar registro

--- a/ui/resources.qrc
+++ b/ui/resources.qrc
@@ -19,7 +19,12 @@
     <file>resources/icons/logout.png</file>
     <file>resources/icons/calendar.png</file>
     <file>resources/icons/menu.png</file>
+    <file>resources/icons/circle-green.png</file>
+    <file>resources/icons/circle-yellow.png</file>
+    <file>resources/icons/circle-red.png</file>
+    <file>resources/icons/circle-gray.png</file>
     <file>resources/imagenes/carpeta.png</file>
     <file>resources/imagenes/undraw_team_up_re_84ok.svg</file>
+
   </qresource>
 </RCC>
